docs/examples/sax_parse_with_src_location.output
start_object(elements=18446744073709551615, at=[5,6))
key(val=Image, at=[15,22))
start_object(elements=18446744073709551615, at=[24,25))
key(val=Width, at=[38,45))
number_unsigned(val=800, at=[48,51))
key(val=Height, at=[65,73))
number_unsigned(val=600, at=[75,78))
key(val=Title, at=[92,99))
string(val=View from 15th Floor, at=[102,124))
key(val=Thumbnail, at=[138,149))
start_object(elements=18446744073709551615, at=[151,152))
key(val=Url, at=[169,174))
string(val=http://www.example.com/image/481989943, at=[179,219))
key(val=Height, at=[237,245))
number_unsigned(val=125, at=[247,250))
key(val=Width, at=[268,275))
number_unsigned(val=100, at=[278,281))
end_object(at=[294,295))
key(val=Animated, at=[309,319))
boolean(val=false, at=[322,327))
key(val=IDs, at=[341,346))
start_array(elements=18446744073709551615, at=[348,349))
number_unsigned(val=116, at=[349,352))
number_unsigned(val=943, at=[354,357))
number_unsigned(val=234, at=[359,362))
number_integer(val=-38793, at=[364,370))
end_array(at=[370,371))
key(val=DeletionDate, at=[385,399))
null(at=[401,405))
key(val=Distance, at=[419,429))
number_float(val=12.723375, s=12.723374634, at=[431,443))
end_object(at=[452,453))
end_object(at=[458,459))
parse_error(position=460, last_token=12.723374634<U+000A>        }<U+000A>    }],
            ex=[json.exception.parse_error.101] parse error at line 17, column 6: syntax error while parsing value - unexpected ']'; expected end of input)

result: false
